--- a/doc/usecase.org
+++ b/doc/usecase.org
@@ -16,11 +16,18 @@
 - start_date
 - end_date
 - duration
+- name
 - organizer
 - score
 - user_id
 
 培训类别
 
-- name
-- weight
+- OffJobTrain
+- LectureTrain
+- InJobTrain
+- ReTrain
+
+计分规则 Scoring Rule
+  
+
