--- a/doc/usecase.org
+++ b/doc/usecase.org
@@ -42,3 +42,10 @@
 计分规则 Scoring Rule
   
 
+* NEXT 实现不同的培训类别的登记与统计
+:LOGBOOK:
+CLOCK: [2012-08-23 四 14:12]--[2012-08-23 四 17:13] =>  3:01
+:END:
+[2012-08-23 四 14:11]
+* TODO 借助于 =ruport= 或是其他工具完成数据及报表的导出
+[2012-08-23 四 14:12]
