--- a/doc/usecase.org
+++ b/doc/usecase.org
@@ -31,16 +31,25 @@
 
 ** LectureTrain
 
+2
 
 ** InJobTrain
 
 - category
 - level
 
+| 类型     | 初级 | 中级 | 高级 | 特技     |
+|----------+------+------+------+----------|
+| 三大模块 |    2 |    4 |    6 |          |
+| 学历教育 |    6 |    9 |   15 |          |
+| 专业认证 |    3 |    6 |    9 | 12[fn:1] |
+|          |      |      |      |          |
+|----------+------+------+------+----------|
+
 ** ReTrain
 
 计分规则 Scoring Rule
-  
+10  
 
 * NEXT 实现不同的培训类别的登记与统计
 :LOGBOOK:
@@ -49,3 +58,8 @@ CLOCK: [2012-08-23 四 14:12]--[2012-08-23 四 17:13] =>  3:01
 [2012-08-23 四 14:11]
 * TODO 借助于 =ruport= 或是其他工具完成数据及报表的导出
 [2012-08-23 四 14:12]
+* Footnotes
+
+[fn:1] 获得国际权威机构或部门认证的证书，如注册会计师、律师证等。
+
+
