--- a/config/locales/simple_form.zh.yml
+++ b/config/locales/simple_form.zh.yml
@@ -1,9 +1,9 @@
-en:
+zh:
   simple_form:
-    "yes": 'Yes'
-    "no": 'No'
+    "yes": '是'
+    "no": '否'
     required:
-      text: 'required'
+      text: '必填项'
       mark: '*'
       # You can uncomment the line below if you need to overwrite the whole required html.
       # When using html, text and mark won't be used.
@@ -23,19 +23,20 @@ en:
     #   defaults:
     #     username: 'User name to sign in.'
     #     password: 'No special characters, please.'
-
-zh:
-  simple_form:
     labels:
+      defaults:
+        password              : 密码
+        password_confirmation : 重复密码
+        submit                : 确定
       user:
-        new:
-          name                  : 姓名
-          department            : 部门
-          email                 : 账号
-          password              : 密码
-          password_confirmation : 重复密码
-          position              : 职务
-          submit                : 确定
+        name       : 姓名
+        department : 部门
+        email      : 账号
+        position   : 职务
+        edit:
+          password              : 新密码
+          password_confirmation : 新密码确认
+          current_password      : 原密码
       train:
         category   : 培训类别
         trainee    : 参训人员
