first running version

--- a/doc/usecase.org
+++ b/doc/usecase.org
@@ -51,13 +51,26 @@
 计分规则 Scoring Rule
 10  
 
-* NEXT 实现不同的培训类别的登记与统计
-:LOGBOOK:
-CLOCK: [2012-08-23 四 14:12]--[2012-08-23 四 17:13] =>  3:01
-:END:
-[2012-08-23 四 14:11]
+* DONE 实现不同的培训类别的登记与统计
+  CLOSED: [2012-08-28 二 15:15]
+  :LOGBOOK:
+  - State "DONE"       from "NEXT"       [2012-08-28 二 15:15]
+  CLOCK: [2012-08-23 四 14:12]--[2012-08-23 四 17:13] =>  3:01
+  :END:
+  [2012-08-23 四 14:11]
+* TODO 实现表格的排序和分页
+  [2012-08-28 二 15:15]
 * TODO 借助于 =ruport= 或是其他工具完成数据及报表的导出
-[2012-08-23 四 14:12]
+  [2012-08-23 四 14:12]
+* NEXT 实现浏览路径导航
+  :LOGBOOK:
+  CLOCK: [2012-08-28 二 15:25]--[2012-08-28 二 17:09] =>  1:44
+  :END:
+  [2012-08-28 二 15:17]
+* 待确定事项
+  [2012-08-28 二 15:20]
+
+  - 跨年度的培训如何进行管理
 * Footnotes
 
 [fn:1] 获得国际权威机构或部门认证的证书，如注册会计师、律师证等。
