--- a/config/locales/simple_form.zh.yml
+++ b/config/locales/simple_form.zh.yml
@@ -38,11 +38,11 @@ zh:
           password_confirmation : 新密码确认
           current_password      : 原密码
       train:
-        category   : 培训类别
-        trainee    : 参训人员
-        name       : 培训项目
-        start_date : 开始时间
-        end_date   : 结束时间
-        period     : 学时
-        organizer  : 举办单位
-        comment    : 备注
+        category_id : 培训类别
+        trainee     : 参训人员
+        name        : 培训项目
+        start_date  : 开始时间
+        end_date    : 结束时间
+        period      : 学时
+        organizer   : 举办单位
+        comment     : 备注
