--- a/config/locales/simple_form.zh.yml
+++ b/config/locales/simple_form.zh.yml
@@ -9,7 +9,7 @@ zh:
       # When using html, text and mark won't be used.
       # html: '<abbr title="required">*</abbr>'
     error_notification:
-      default_message: "Please review the problems below:"
+      default_message: "请检查下列表单项:"
     # Labels and hints examples
     # labels:
     #   defaults:
