--- a/doc/usecase.org
+++ b/doc/usecase.org
@@ -60,8 +60,14 @@
   [2012-08-23 四 14:11]
 * TODO 实现表格的排序和分页
   [2012-08-28 二 15:15]
-* TODO 借助于 =ruport= 或是其他工具完成数据及报表的导出
+* CANCELLED 借助于 =ruport= 或是其他工具完成数据及报表的导出      :CANCELLED:
+CLOSED: [2012-09-06 四 00:36]
+:LOGBOOK:
+- State "CANCELLED"  from "TODO"       [2012-09-06 四 00:36]
+:END:
   [2012-08-23 四 14:12]
+* NEXT 通过在 *seed* 中加入报表模版到数据库中
+[2012-09-06 四 00:36]
 * NEXT 实现浏览路径导航
   :LOGBOOK:
   CLOCK: [2012-08-28 二 15:25]--[2012-08-28 二 17:09] =>  1:44
