--- a/doc/usecase.org
+++ b/doc/usecase.org
@@ -77,6 +77,29 @@ CLOSED: [2012-09-06 四 00:36]
   [2012-08-28 二 15:20]
 
   - 跨年度的培训如何进行管理
+
+    跨年度培训计入下一年度的培训学分
+
+  - 系统角色与操作流程
+
+    + 普通用户
+      
+      普通用户只可以查看自己参加的培训及学分
+
+    + 处室管理员
+      
+      处室管理员除了可以查看自己的学分外，还可以录入、修改以及删除培训记录，如果该培训记录已由系统管理员锁定，则不可修改及删除。
+
+    + 系统管理员
+      
+      具备所有权限，系统管理员对培训信息审验后，培训信息处于加锁状态，只有系统管理员解锁后，才能对培训信息进行修订或删除。
+    
+  - 学分与学时计算
+    
+    均有人事处审定后，由录入人员直接输入，不需要计算
+
+  - 学分统计
+
 * Footnotes
 
 [fn:1] 获得国际权威机构或部门认证的证书，如注册会计师、律师证等。
